--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,8 @@
 .App {
   min-height: 100vh;
   display: flex;
+  background-image: url("../public/chat_back.jpg");
+  background-position: center;
 }
 
 ::-webkit-scrollbar {
